src/app/shared/components/toast/toast.component.css
#detailedErrorMessage {
  overflow-wrap: break-word;
}

.toast-body {
  bottom: 0;
  right: 5px;
  position: fixed;
  z-index: 999;
}

.close-icon {
  position: absolute;
  right: 0;
  top: 0;
  cursor: pointer;
  font-size: 8pt;
  padding: 0.25rem;

  &:hover {
    cursor: pointer;
    color: white;
  }
}

